--- a/RSSReader/app/src/main/res/values/strings.xml
+++ b/RSSReader/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="link">http://socar.az/socar/az/feed</string>
     <string name="title_activity_news">NewsActivity</string>
+    <string name="title_activity_lang">LangActivity</string>
+    <string name="title_activity_search">SearchActivity</string>
+    <string name="title_activity_results">ResultsActivity</string>>
 </resources>
