The app can now save the news
-SQLite used to store the news
-added some activities to use the database
-added an AlertDialog to MainActivity to notify the user when there
isn’t a connection to internet.

--- a/RSSReader/app/src/main/res/values/strings.xml
+++ b/RSSReader/app/src/main/res/values/strings.xml
@@ -1,11 +1,14 @@
 <resources>
-    <string name="app_name">RSS</string>
-
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">RSS Reader</string>
     <string name="action_settings">Settings</string>
     <string name="link">http://socar.az/socar/az/feed</string>
-    <string name="title_activity_news">NewsActivity</string>
-    <string name="title_activity_lang">LangActivity</string>
-    <string name="title_activity_search">SearchActivity</string>
-    <string name="title_activity_results">ResultsActivity</string>>
+    <string name="title_activity_main">RSS Reader</string>
+    <string name="title_activity_news">RSS Reader</string>
+    <string name="title_activity_lang">RSS Reader</string>
+    <string name="title_activity_search">RSS Reader</string>
+    <string name="title_activity_results">RSS Reader</string>
+    <string name="title_activity_storage">StorageActivity</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_stored_news">StoredNewsActivity</string>>
 </resources>
